--- a/src/app/components/home-component/home-component.component.html
+++ b/src/app/components/home-component/home-component.component.html
@@ -22,7 +22,11 @@
 </div>
 
   <!-- Down Arrow -->
-  <div class="fs-4 text-muted">
-    <i class="bi bi-arrow-down-short scroll-arrow"></i>
+  <div id="about"class="fs-4 text-muted container py-5">
+    <a href="#about">
+      <i class="bi bi-arrow-down-short scroll-arrow"></i>
+    </a>
   </div>
 </div>
+
+<app-about></app-about>
