--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -15,18 +15,12 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+      <ul class="navbar-nav ms-auto">
         <li class="nav-item" *ngFor="let link of navLinks">
-          <a 
-            class="nav-link" 
-            [routerLink]="link.path" 
-            routerLinkActive="active"
-            [routerLinkActiveOptions]="{ exact: true }"
-          >
-            {{ link.label }}
-          </a>
+          <a class="nav-link" (click)="scrollToSection(link.path)">{{ link.label }}</a>
         </li>
       </ul>
+
     </div>
   </div>
 </nav>
