--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top shadow-sm">
-  <div class="container">
-    <a class="navbar-brand fw-bold" routerLink="/">
+  <div class="container-fluid px-3 px-md-5">
+    <a class="navbar-brand fw-bold fs-5" routerLink="/">
       Alsainey<span class="text-purple">Barry</span>
     </a>
     <button
@@ -14,13 +14,20 @@
     >
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item" *ngFor="let link of navLinks">
-          <a class="nav-link" (click)="scrollToSection(link.path)">{{ link.label }}</a>
-        </li>
-      </ul>
 
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto gap-2">
+        <li class="nav-item" *ngFor="let link of navLinks">
+          <a
+            class="nav-link"
+            [ngClass]="{ 'active-link': currentSection === link.path }"
+            (click)="scrollToSection(link.path)"
+          >
+            {{ link.label }}
+          </a>
+        </li>
+
+      </ul>
     </div>
   </div>
 </nav>
