--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -5,7 +5,7 @@
       <div class="col-md-7">
         <h2 class="fw-bold mb-4 py-3">About Me</h2>
         <p class="text-muted">
-          I'm Alsainey Barry, a passionate software engineer who believes that great code is more than just functional—it's intentional, clean, and solves real problems for real people.
+          I'm Alsainey Barry, a passionate software engineer who believes that great code is more than just functional, it's intentional, clean, and solves real problems for real people.
         </p>
         <p class="text-muted py-3">
           With expertise in the MEAN stack and Java with Spring Boot, combined with DevOps practices, I help businesses and individuals build scalable, robust digital solutions from concept to deployment.
