--- a/src/app/components/offers/offers.component.html
+++ b/src/app/components/offers/offers.component.html
@@ -1,4 +1,4 @@
-<section class="service py-5 bg-light">
+<section id="services" class="service py-5 bg-light">
   <div class="container">
    
     <div class="row justify-content-center mb-5">
