--- a/src/app/components/home-component/home-component.component.html
+++ b/src/app/components/home-component/home-component.component.html
@@ -1,4 +1,5 @@
-<div class="home-container text-center d-flex flex-column align-items-center justify-content-center mb-5">
+<section id="home">
+  <div class="home-container text-center d-flex flex-column align-items-center justify-content-center mb-5">
   <h1 class="display-4 fw-bold px-3">
     Building with <span class="text-purple">Intention</span>
   </h1>
@@ -18,14 +19,20 @@
   </div>
 
   <!-- Social Icons -->
-  <div class="social-icons d-flex gap-4 mb-4 fs-4">
-    <i class="bi bi-github" title="GitHub"></i>
-    <i class="bi bi-linkedin" title="LinkedIn"></i>
-    <i class="bi bi-chat-left" title="Chat"></i>
+  <div class="social-icons d-flex gap-3 mb-4 fs-4">
+              <a href="https://github.com/Juniorbarry26" target="_blank" class="py-3" rel="noopener noreferrer">
+                <i class="bi bi-github"></i>
+              </a>
+              <a href="https://www.linkedin.com/in/alsainey-barry-b1907a212/" class="py-3">
+                <i class="bi bi-linkedin"></i>
+              </a>
+              <a href="https://wa.me/2203444935" target="_blank" class="py-3" rel="noopener noreferrer">
+                <i class="bi bi-chat-dots"></i>
+              </a>
   </div>
 
   <!-- Down Arrow -->
-  <div id="about" class="fs-4 text-muted container py-5">
+  <div id="about" class="fs-4 text-muted container py-2">
     <a href="#about">
       <i class="bi bi-arrow-down-short scroll-arrow"></i>
     </a>
@@ -33,3 +40,5 @@
 </div>
 
 <app-about></app-about>
+
+</section>
